enso/src/core/grammar/models/grammar.grammar
grammar GrammarGrammar
  start Grammar
  
  Grammar ::= [Grammar] "grammar" name:sym "start" \start:Rule^ rules:Rule*

  Rule ::= [Rule] name:sym "::=" arg:Alt

  Alt ::= [Alt] alts:{Create "|"}+

  Create ::= [Create] "[" name:sym "]" arg:Sequence
    | Sequence

  Sequence ::= [Sequence] elements:Field*

  Field ::= [Field] name:sym ":" arg:Pattern
    | Pattern
  
  Pattern ::= 
      [Value] kind:"int"
    | [Value] kind:"str"
    | [Value] kind:"real"
    | [Value] kind:"bool"
    | [Value] kind:"sym"
    | [Code] "@" code:str
    | [Ref] name:sym "^"
    | [Lit] value:str
    | [Call] rule:Rule^
    | [Regular] arg:Pattern "*"       @"@optional = true; @many = true; @sep = nil"
    | [Regular] arg:Pattern "?"			@"@optional = true; @sep = nil"
    | [Regular] arg:Pattern "+"  			@"@many = true; @sep = nil"
    | [Regular] "{" arg:Pattern sep:str "}" "*" 	@"@optional = true; @many = true"
    | [Regular] "{" arg:Pattern sep:str "}" "+"   @"@many = true"
    | "(" Alt ")"
